@@ -20,6 +20,9 @@ import com.google.inject.Module;
 import com.google.template.soy.msgs.SoyMsgPlugin;
 import com.google.template.soy.plugin.restricted.SoySourceFunction;
 import java.io.File;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import org.kohsuke.args4j.ClassParser;
 import org.kohsuke.args4j.CmdLineException;
 import org.kohsuke.args4j.CmdLineParser;
 import org.kohsuke.args4j.NamedOptionDef;
@@ -36,13 +39,23 @@ final class SoyCmdLineParser extends CmdLineParser {
     CmdLineParser.registerHandler(Boolean.class, BooleanOptionHandler.class);
     CmdLineParser.registerHandler(boolean.class, BooleanOptionHandler.class);
     CmdLineParser.registerHandler(SoyMsgPlugin.class, MsgPluginOptionHandler.class);
+    CmdLineParser.registerHandler(Path.class, PathOptionHandler.class);
   }
 
-  private final ClassLoader pluginLoader;
+  private final PluginLoader pluginLoader;
 
-  SoyCmdLineParser(Object bean, ClassLoader loader) {
-    super(bean);
+  SoyCmdLineParser(PluginLoader loader) {
+    super(/*bean=*/ null);
     this.pluginLoader = loader;
+  }
+
+  /**
+   * Registers the flags defined in {@code bean} with this parser.
+   *
+   * <p>Must be called before {@link #parseArgument}.
+   */
+  void registerFlagsObject(Object bean) {
+    new ClassParser().parse(bean, this);
   }
 
   // NOTE: all the OptionHandler types need to be public with public constructors so args4j can use
@@ -203,6 +216,46 @@ final class SoyCmdLineParser extends CmdLineParser {
     }
   }
 
+  /** OptionHandler for args4j that handles a comma-delimited list of Path objects. */
+  public static final class PathListOptionHandler extends ListOptionHandler<Path> {
+
+    /** {@link ListOptionHandler#ListOptionHandler(CmdLineParser,OptionDef,Setter)} */
+    public PathListOptionHandler(
+        CmdLineParser parser, OptionDef option, Setter<? super Path> setter) {
+      super(parser, option, setter);
+    }
+
+    @Override
+    Path parseItem(String item) {
+      return Paths.get(item);
+    }
+  }
+
+  /** OptionHandler for args4j that handles a comma-delimited list of Path objects. */
+  public static final class PathOptionHandler extends OptionHandler<Path> {
+
+    public PathOptionHandler(CmdLineParser parser, OptionDef option, Setter<? super Path> setter) {
+      super(parser, option, setter);
+    }
+
+    @Override
+    public int parseArguments(Parameters params) throws CmdLineException {
+      String parameter = params.getParameter(0);
+      // An empty string should be null
+      if (parameter.isEmpty()) {
+        setter.addValue(null);
+      } else {
+        setter.addValue(Paths.get(parameter));
+      }
+      return 1;
+    }
+
+    @Override
+    public String getDefaultMetaVariable() {
+      return "foo/bar/baz";
+    }
+  }
+
   /**
    * OptionHandler for args4j that handles a comma-delimited list of strings referencing guice
    * module names.
@@ -283,21 +336,43 @@ final class SoyCmdLineParser extends CmdLineParser {
       String flagName,
       String objectType,
       Class<T> clazz,
-      ClassLoader loader,
+      PluginLoader loader,
       String instanceClassName) {
     try {
-      return Class.forName(instanceClassName, true, loader)
-          .asSubclass(clazz)
-          .getConstructor()
-          .newInstance();
-
+      return loader.loadPlugin(instanceClassName).asSubclass(clazz).getConstructor().newInstance();
+    } catch (ClassCastException cce) {
+      throw new CommandLineError(
+          String.format(
+              "%s \"%s\" is not a subclass of %s.  Classes passed to %s should be %ss. "
+                  + "Did you pass it to the wrong flag?",
+              objectType,
+              instanceClassName,
+              clazz.getSimpleName(),
+              flagName,
+              clazz.getSimpleName()),
+          cce);
     } catch (ReflectiveOperationException e) {
       throw new CommandLineError(
           String.format(
-              "Cannot instantiate %s \"%s\" registered with flag --%s.  Please make "
+              "Cannot instantiate %s \"%s\" registered with flag %s.  Please make "
                   + "sure that the %s exists and is on the compiler classpath and has a public "
-                  + "zero arguments constructor.\nCaused by: %s",
-              objectType, instanceClassName, flagName, objectType, e));
+                  + "zero arguments constructor.",
+              objectType, instanceClassName, flagName, objectType),
+          e);
+    } catch (ExceptionInInitializerError e) {
+      throw new CommandLineError(
+          String.format(
+              "Cannot instantiate %s \"%s\" registered with flag %s. An error was thrown while "
+                  + "loading the class.  There is a bug in the implementation.",
+              objectType, instanceClassName, flagName),
+          e);
+    } catch (SecurityException e) {
+      throw new CommandLineError(
+          String.format(
+              "Cannot instantiate %s \"%s\" registered with flag %s. A security manager is "
+                  + "preventing instantiation.",
+              objectType, instanceClassName, flagName),
+          e);
     }
   }
 }
